--- a/jupyterhub/jupyterhub/base/jupyterhub-configmap.yaml
+++ b/jupyterhub/jupyterhub/base/jupyterhub-configmap.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -5,12 +6,11 @@ metadata:
     app: jupyterhub
   name: jupyterhub-cfg
 data:
-  jupyterhub_config.py: ""
-
+  jupyterhub_config.py: |
+    c.JupyterHub.authenticate_prometheus = False;
   jupyterhub_admins: "admin"
   gpu_mode: ""
-  singleuser_pvc_size: 2Gi
-  notebook_destination: "$(notebook_destination)"
+  singleuser_pvc_size: 16Gi
 
 ---
 apiVersion: v1
