--- a/superset/base/deployment.yaml
+++ b/superset/base/deployment.yaml
@@ -23,11 +23,48 @@ spec:
         volumeMounts:
           - mountPath: /etc/superset
             name: superset-config
+        env:
+          - name: POSTGRESQL_USERNAME
+            valueFrom:
+              secretKeyRef:
+                key: database-user
+                name: supersetdb
+          - name: POSTGRESQL_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                key: database-password
+                name: supersetdb
+          - name: POSTGRESQL_DATABASE
+            valueFrom:
+              secretKeyRef:
+                key: database-name
+                name: supersetdb
+        envFrom:
+          - secretRef:
+              name: superset-oidc
       containers:
       - name: superset
+        env:
+          - name: POSTGRESQL_USERNAME
+            valueFrom:
+              secretKeyRef:
+                key: database-user
+                name: supersetdb
+          - name: POSTGRESQL_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                key: database-password
+                name: supersetdb
+          - name: POSTGRESQL_DATABASE
+            valueFrom:
+              secretKeyRef:
+                key: database-name
+                name: supersetdb
         envFrom:
           - secretRef:
               name: superset
+          - secretRef:
+              name: superset-oidc
         image: $(SUPERSET_IMAGE)
         imagePullPolicy: Always
         ports:
@@ -45,9 +82,6 @@ spec:
             memory: $(SUPERSET_MEMORY_LIMITS)
       volumes:
         - name: superset-config
-          secret:
-            secretName: superset-config
+          configMap:
+            name: superset-config-py
             defaultMode: 420
-            items:
-              - key: superset_config.py
-                path: superset_config.py
