--- a/trino/base/trino-worker-dc.yaml
+++ b/trino/base/trino-worker-dc.yaml
@@ -1,6 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    configmap.reloader.stakater.com/reload: "trino-configfiles, trino-catalog"
+    secret.reloader.stakater.com/reload: "postgres-dbs, s3buckets"
   name: trino-worker
   labels:
     instance: trino
@@ -21,25 +24,13 @@ spec:
     spec:
       volumes:
         - name: trino-config-volume
-          secret:
-            secretName: trino-config
+          configMap:
+            name: trino-configfiles
             defaultMode: 420
-            items:
-              - key: config-worker.properties
-                path: config-worker.properties
-              - key: jvm-worker.config
-                path: jvm-worker.config
-              - key: log.properties
-                path: log.properties
-              - key: node.properties
-                path: node.properties
         - name: trino-catalogs-volume
-          secret:
-            secretName: trino-catalog
+          configMap:
+            name: trino-catalog
             defaultMode: 420
-            items:
-              - key: hive.properties
-                path: hive.properties
       containers:
         - resources:
             requests:
@@ -57,16 +48,6 @@ spec:
                 fieldRef:
                   apiVersion: v1
                   fieldPath: metadata.uid
-            - name: AWS_ACCESS_KEY_ID
-              valueFrom:
-                secretKeyRef:
-                  name: $(s3_credentials_secret)
-                  key: AWS_ACCESS_KEY_ID
-            - name: AWS_SECRET_ACCESS_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: $(s3_credentials_secret)
-                  key: AWS_SECRET_ACCESS_KEY
           ports:
             - containerPort: 8080
               protocol: TCP
@@ -76,6 +57,11 @@ spec:
             - name: trino-catalogs-volume
               mountPath: /etc/trino/catalog
           image: trino
+          envFrom:
+            - secretRef:
+                name: s3buckets
+            - secretRef:
+                name: postgres-dbs
           args:
             - --config=/etc/trino/config-worker.properties
             - --jvm-config=/etc/trino/jvm-worker.config
