--- a/jupyterhub/jupyterhub/base/jupyterhub-singleuser-profiles-sizes-configmap.yaml
+++ b/jupyterhub/jupyterhub/base/jupyterhub-singleuser-profiles-sizes-configmap.yaml
@@ -10,24 +10,24 @@ data:
       - name: Small
         resources:
           requests:
-            memory: 1Gi
-            cpu: 1
+            memory: 512Mi
+            cpu: 100m
           limits:
-            memory: 2Gi
-            cpu: 2
+            memory: 512Mi
+            cpu: 100m
       - name: Medium
         resources:
           requests:
-            memory: 2Gi
-            cpu: 2
+            memory: 512Mi
+            cpu: 120m
           limits:
-            memory: 4Gi
-            cpu: 4
+            memory: 6300Mi
+            cpu: 3
       - name: Large
         resources:
           requests:
-            memory: 4Gi
-            cpu: 4
+            memory: 5Gi
+            cpu: 500m
           limits:
-            memory: 8Gi
-            cpu: 8
+            memory: 34Gi
+            cpu: 9
