--- a/superset/base/route.yaml
+++ b/superset/base/route.yaml
@@ -1,12 +1,11 @@
-apiVersion: route.openshift.io/v1
 kind: Route
+apiVersion: route.openshift.io/v1
 metadata:
   name: superset
-  labels:
-    app: superset
+  annotations:
+    kubernetes.io/tls-acme: "true"
 spec:
-  port:
-    targetPort: 8088-tcp
+  host: superset.operate-first.cloud
   to:
     kind: Service
     name: superset
