--- a/kafka/kafka/base/kafka-cluster.yaml
+++ b/kafka/kafka/base/kafka-cluster.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   kafka:
     version: 2.7.0
-    replicas: 3
+    replicas: 5
     listeners:
       - name: plain
         port: 9092
@@ -16,18 +16,34 @@ spec:
         port: 9093
         type: internal
         tls: true
+        authentication:
+          type: tls
       - name: external
         port: 9094
         type: route
         tls: true
+        authentication:
+          type: tls
+    authorization:
+      type: simple
     config:
+      auto.create.topics.enable: false
       offsets.topic.replication.factor: 3
       transaction.state.log.replication.factor: 3
       transaction.state.log.min.isr: 3
       log.message.format.version: '2.7'
       inter.broker.protocol.version: '2.7'
+    resources:
+      limits:
+        cpu: 2000m
+        memory: 32Gi
+      requests:
+        cpu: 1000m
+        memory: 16Gi
     storage:
-      type: ephemeral
+      type: persistent-claim
+      size: 40Gi
+      deleteClaim: false
     metricsConfig:
       type: jmxPrometheusExporter
       valueFrom:
@@ -35,9 +51,18 @@ spec:
           name: kafka-metrics-config
           key: kafka-prometheus-metrics
   zookeeper:
-    replicas: 3
+    replicas: 5
+    resources:
+      limits:
+        cpu: 500m
+        memory: 2Gi
+      requests:
+        cpu: 200m
+        memory: 1Gi
     storage:
-      type: ephemeral
+      type: persistent-claim
+      size: 2Gi
+      deleteClaim: false
     metricsConfig:
       type: jmxPrometheusExporter
       valueFrom:
@@ -46,4 +71,5 @@ spec:
           key: zookeeper-prometheus-metrics
   entityOperator:
     topicOperator: {}
-    userOperator: {}
+    userOperator:
+      secretPrefix: kafka-user-
