--- a/superset/base/pvc.yaml
+++ b/superset/base/pvc.yaml
@@ -2,8 +2,12 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: superset-data
+  namespace: opendatahub
   labels:
-    app: superset
+    opendatahub.io/component: "true"
+    component.opendatahub.io/name: superset
+  annotations:
+    volume.beta.kubernetes.io/storage-class: moc-nfs-csi
 spec:
   accessModes:
     - ReadWriteOnce
