fixing permissions with operate-first/odh-manifests fork
Changes are welcome, added everyone as approver and reviewer because wasn't certain how we were going to do permissions.

--- a/.thoth.yaml
+++ b/.thoth.yaml
@@ -2,10 +2,11 @@ managers:
   - name: version
     configuration:
       maintainers:
-        - crobby
-        - vpavlin
-        - lavlas
-        - nakfour
+        - 4n4nd
+        - Gkrumbach07
+        - Gregory-Pereira
+        - harshad16
+        - HumairAK
       assignees:
         - sesheta
       labels: [bot]
