--- a/odh-dashboard/base/service.yaml
+++ b/odh-dashboard/base/service.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   selector:
     deployment: odh-dashboard
+  type: LoadBalancer
   ports:
   - protocol: TCP
     targetPort: 8080
