--- a/trino/base/trino-worker-dc.yaml
+++ b/trino/base/trino-worker-dc.yaml
@@ -60,6 +60,8 @@ spec:
           envFrom:
             - secretRef:
                 name: s3buckets
+            - secretRef:
+                name: shared-secret
           args:
             - --config=/etc/trino/config-worker.properties
             - --jvm-config=/etc/trino/jvm-worker.config
