--- a/jupyterhub/jupyterhub/base/jupyterhub-singleuser-profiles-sizes-configmap.yaml
+++ b/jupyterhub/jupyterhub/base/jupyterhub-singleuser-profiles-sizes-configmap.yaml
@@ -7,7 +7,7 @@ metadata:
 data:
   jupyterhub-singleuser-profiles.yaml: |
       sizes:
-      - name: Default
+      - name: Workshop
         resources:
           requests:
             memory: 6Gi
