Remove db secret from superset and auto reload configs.

--- a/superset/base/supersetdb-deployment.yaml
+++ b/superset/base/supersetdb-deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   annotations:
     template.alpha.openshift.io/wait-for-ready: "true"
+    secret.reloader.stakater.com/reload: "supersetdb"
   labels:
     app: supersetdb
   name: supersetdb
