--- a/superset/base/deployment.yaml
+++ b/superset/base/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: superset
   labels:
     app: superset
+  annotations:
+    configmap.reloader.stakater.com/reload: "superset-config-py"
+    secret.reloader.stakater.com/reload: "superset-custom"
 spec:
   replicas: 1
   selector:
