--- a/trino/base/trino-coordinator-dc.yaml
+++ b/trino/base/trino-coordinator-dc.yaml
@@ -41,6 +41,10 @@ spec:
             items:
               - key: config.yaml
                 path: config.yaml
+        - name: trino-secret-files
+          secret:
+            secretName: trino-secret-files
+            defaultMode: 420
       containers:
         - resources:
             requests:
@@ -70,6 +74,8 @@ spec:
               mountPath: /etc/trino/catalog
             - name: kafka-table-description-dir
               mountPath: /etc/kafka/table-description-dir
+            - name: trino-secret-files
+              mountPath: /etc/trino/secrets
           image: trino
           envFrom:
             - secretRef:
