[odh-cl1] Deploy the current dev version of the odh-dashboard
The BYON functionality development continues into CNBi. Current development
happens in the thoth-station org. This points the deployment to the dev tag
coming from the thoth-station/odh-dashboard repo

Signed-off-by: Pep Turró Mauri <pep@redhat.com>

--- a/odh-dashboard/base/deployment.yaml
+++ b/odh-dashboard/base/deployment.yaml
@@ -27,7 +27,7 @@ spec:
       serviceAccount: odh-dashboard
       containers:
       - name: odh-dashboard
-        image: quay.io/operate-first/odh-dashboard:byon
+        image: quay.io/thoth-station/odh-dashboard:dev
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
