--- a/odh-dashboard/base/role.yaml
+++ b/odh-dashboard/base/role.yaml
@@ -20,67 +20,6 @@ rules:
       - list
       - watch
   - apiGroups:
-      - build.openshift.io
-    verbs:
-      - get
-      - list
-      - watch
-    resources:
-      - builds
-      - buildconfigs
-      - buildconfigs/instantiate
-  - verbs:
-      - list
-    apiGroups:
-      - rbac.authorization.k8s.io
-    resources:
-      - rolebindings
-  - apiGroups:
-      - apps.openshift.io
-    verbs:
-      - get
-      - list
-      - watch
-      - create
-      - update
-      - patch
-      - delete
-    resources:
-      - deploymentconfigs
-  - apiGroups:
-      - image.openshift.io
-    verbs:
-      - create
-      - get
-      - list
-      - update
-      - patch
-      - delete
-    resources:
-      - imagestreams
-  - apiGroups:
-      - tekton.dev
-    verbs:
-      - get
-      - list
-      - create
-      - delete
-    resources:
-      - pipelineruns
-  - apiGroups:
-      - ''
-    verbs:
-      - create
-      - delete
-      - get
-      - list
-      - patch
-      - update
-      - watch
-    resources:
-      - configmaps
-      - secrets
-  - apiGroups:
       - batch
     verbs:
       - create
@@ -94,3 +33,71 @@ rules:
       - cronjobs
       - jobs
       - jobs/status
+  - apiGroups:
+      - image.openshift.io
+    verbs:
+      - create
+      - get
+      - list
+      - update
+      - patch
+      - delete
+    resources:
+      - imagestreams
+  - apiGroups:
+      - build.openshift.io
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - patch
+      - delete
+    resources:
+      - builds
+      - buildconfigs
+      - buildconfigs/instantiate
+  - apiGroups:
+      - apps
+    verbs:
+      - patch
+      - update
+    resources:
+      - deployments
+  - apiGroups:
+      - apps.openshift.io
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+    resources:
+      - deploymentconfigs
+      - deploymentconfigs/instantiate
+  - apiGroups:
+      - opendatahub.io
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+    resources:
+      - odhdashboardconfigs
+  - apiGroups:
+      - kubeflow.org
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - update
+      - patch
+      - delete
+    resources:
+      - notebooks
