--- a/odh-dashboard/base/kustomization.yaml
+++ b/odh-dashboard/base/kustomization.yaml
@@ -4,11 +4,17 @@ commonLabels:
   app: odh-dashboard
   app.kubernetes.io/part-of: odh-dashboard
 resources:
+- odh-dashboard-crd.yaml
 - role.yaml
 - cluster-role.yaml
 - service-account.yaml
 - role-binding.yaml
 - cluster-role-binding.yaml
+- cluster-monitoring-role-binding.yaml
 - deployment.yaml
 - routes.yaml
 - service.yaml
+images:
+- name: odh-dashboard
+  newName: quay.io/thoth-station/odh-dashboard
+  newTag: dev
