--- a/odh-dashboard/overlays/authentication/kustomization.yaml
+++ b/odh-dashboard/overlays/authentication/kustomization.yaml
@@ -4,6 +4,7 @@ bases:
   - ../../base
 resources:
   - clusterrolebinding.yaml
+  - secret.yaml
 patchesJson6902:
   - path: deployment.yaml
     target:
@@ -27,3 +28,7 @@ patchesJson6902:
       kind: Route
       name: odh-dashboard
     path: route.yaml
+images:
+- name: oauth-proxy
+  newName: registry.redhat.io/openshift4/ose-oauth-proxy
+  newTag: v4.8
