[osc-cl1-byon] Point the dashboard to the odh-admin group
The Group managed by operate-first is called odh-admin, not odh-admins

Signed-off-by: Pep Turró Mauri <pep@redhat.com>

--- a/odh-dashboard/overlays/odhdashboardconfig/odh-dashboard-config.yaml
+++ b/odh-dashboard/overlays/odhdashboardconfig/odh-dashboard-config.yaml
@@ -41,5 +41,5 @@ spec:
         cpu: "4"
         memory: 4Gi
   groupsConfig:
-    adminGroups: 'odh-admins'
+    adminGroups: 'odh-admin'
     allowedGroups: 'system:authenticated'
