Update based on standard of odh-dashboard v2.3.1 and above
Signed-off-by: Harshad Reddy Nalla <hnalla@redhat.com>

--- a/odh-dashboard/base/kustomization.yaml
+++ b/odh-dashboard/base/kustomization.yaml
@@ -3,8 +3,10 @@ kind: Kustomization
 commonLabels:
   app: odh-dashboard
   app.kubernetes.io/part-of: odh-dashboard
+bases:
+  - ../crd
+  - ../apps
 resources:
-- odh-dashboard-crd.yaml
 - role.yaml
 - cluster-role.yaml
 - service-account.yaml
