Fix the base kustomize structure and update roles
Signed-off-by: Harshad Reddy Nalla <hnalla@redhat.com>

--- a/odh-dashboard/base/role.yaml
+++ b/odh-dashboard/base/role.yaml
@@ -101,3 +101,24 @@ rules:
       - delete
     resources:
       - notebooks
+  - verbs:
+      - get
+      - list
+    apiGroups:
+      - dashboard.opendatahub.io
+    resources:
+      - odhapplications
+  - verbs:
+      - get
+      - list
+    apiGroups:
+      - dashboard.opendatahub.io
+    resources:
+      - odhdocuments
+  - verbs:
+      - get
+      - list
+    apiGroups:
+      - console.openshift.io
+    resources:
+      - odhquickstarts
