--- a/trino/base/trino-worker-dc.yaml
+++ b/trino/base/trino-worker-dc.yaml
@@ -61,6 +61,10 @@ spec:
           envFrom:
             - secretRef:
                 name: s3buckets
+            - secretRef:
+                name: shared-secret
+            - secretRef:
+                name: trino-secret-env
           args:
             - --config=/etc/trino/config-worker.properties
             - --jvm-config=/etc/trino/jvm-worker.config
