Update Trino to v424
Per release notes, the following changes have been made:
* Change deprecated/removed connector name `hive-hadoop2` to hive
  (Trino v408)
* Set JVM charset to UTF-8 explicitly (Trivo v424)

Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/trino/base/trino-config-secret.yaml
+++ b/trino/base/trino-config-secret.yaml
@@ -29,6 +29,7 @@ stringData:
     -XX:PerBytecodeRecompilationCutoff=10000
     -Djdk.attach.allowAttachSelf=true
     -Djdk.nio.maxCachedBufferSize=2000000
+    -Dfile.encoding=UTF-8
     -javaagent:/usr/lib/trino/lib/jmx_exporter.jar=8082:/etc/trino/prometheus/config.yaml
   jvm-worker.config: |-
     -server
@@ -45,6 +46,7 @@ stringData:
     -XX:PerBytecodeRecompilationCutoff=10000
     -Djdk.attach.allowAttachSelf=true
     -Djdk.nio.maxCachedBufferSize=2000000
+    -Dfile.encoding=UTF-8
   log.properties: |-
     io.trino=INFO
   node.properties: |-
