--- a/trino/base/trino-catalog-secret.yaml
+++ b/trino/base/trino-catalog-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: trino-catalog
 stringData:
   hive.properties: |
-    connector.name=hive-hadoop2
+    connector.name=hive
     hive.metastore.uri=thrift://hive-metastore:9083
     hive.s3.endpoint=$(s3_endpoint_url_prefix)$(s3_endpoint_url)
     hive.s3.signer-type=S3SignerType
