--- a/trino/base/kustomization.yaml
+++ b/trino/base/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
 - hadoop-config.yaml
 - hive-config.yaml
 - hive-jmx-config.yaml
+- trino-config-monitoring-secret.yaml
 - trino-coordinator-dc.yaml
 - trino-service.yaml
 - trino-route.yaml
